add lessons and progress functionality

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Piano Simulation</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <script src="https://threejs.org/build/three.js"></script> -->
 </head>
 <body>
     <h1>3D Piano Simulation</h1>
     <div id="piano"></div>
-    <script src="app.js"></script>
+    <div id="lesson">
+        <h2>Lessons</h2>
+        <div id="lesson-list"></div>
+    </div>
+    <div id="progress">
+        <h2>Progress</h2>
+        <div id="progress-details"></div>
+    </div>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
