fix bug clear eventListener

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <script src="https://threejs.org/build/three.js"></script> -->
 </head>
 <body>
-    <h1>3D Piano Simulation</h1>
+    <h1>Musical Scales on Piano</h1>
     <div id="piano"></div>
     <div id="lesson">
         <h2>Lessons</h2>
