add more major scal lesson

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Piano Simulation</title>
+    <title>Musical Scales on Piano</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="https://threejs.org/build/three.js"></script> -->
 </head>
